# apps/product/src/main/java/it/pagopa/selfcare/product/controller/ProductController.java
@@ -128,6 +128,7 @@ public class ProductController {
     }
 
     @DELETE
+    @Path("/{productId}")
     @Tag(name = "Product")
     @Tag(name = "external-v2")
     @Tag(name = "external-pnpg")
@@ -164,11 +165,7 @@ public class ProductController {
             )
     })
     public Uni<Response> deleteProductById(
-            @Parameter(
-                    name = "productId",
-                    required = true
-            )
-            @QueryParam("productId") String productId) {
+            @PathParam("productId") String productId) {
         return productService.deleteProductById(productId)
                 .map(product -> Response.ok(product).build())
                 .onFailure(IllegalArgumentException.class).recoverWithItem(() ->
